[package]
name = "venx"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "bevy_venx",
    "venx_core",
    "venx_shaders",
    "easy_compute",
    "easy_compute/shaders/*"
    ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy_compute = { path = "./easy_compute"}
serde = { version = "1.0.195", features = ["serde_derive", "derive"] }
bitcode = "0.5.0"
glam = "*"
downcast-rs = "1.2.0"
bytemuck = "1.14.0"
venx_core = { path = "./venx_core", features = [ "bitcode_support" ]}
# plats = { path = "./plats"}

bytemuck_derive = "1.5.0"
async-trait = "0.1.73"
bytes-cast = "0.3.0"
anyhow = "1.0.75"
fastanvil = {version = "0.29.0", optional = true}
# bitcode = { version = "0.4.0", features = ["derive"] }
pollster = "0.3.0"

log = "0.4.20"
# flate2 = "1.0.27"
rand = "0.8.5"
ouroboros = "0.18.3"
owning_ref = "0.4.1"
ron = "0.8.1"
arr_macro = "0.2.1"

[build-dependencies]
spirv-builder = "0.9"
# bmp = "0.5.0"

[patch.crates-io]
# gpu-descriptor = "0.2.3"
# ahash = "0.7.7"

[features]
default = ["gpu", "loader", "mca_converter"]
gpu = []
loader = []
bevy_ecs = []
mca_converter = ["dep:fastanvil"]

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
