[package]
name = "venx"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "bevy_venx",
    "crates/*",
    "crates/easy_compute/shaders/*"
    ]

[[bench]]
name = "compare_get_voxel"
harness = false

#[lib]
#crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# flate2 = "1.0.27"
# plats = { path = "./plats"}
#bytes-cast = "0.3.0"
downcast-rs = "1.2.0"
serde = { version = "1.0.195", features = ["serde_derive", "derive"] }
bitcode = { version = "0.5.0", default-features = false }
glam = "*"
venx_core = { path = "./crates/venx_core", features = [ "bitcode_support" ]}
async-trait = "0.1.77"
anyhow = "1.0.75"
pollster = "0.3.0"
log = "0.4.20"
ouroboros = "0.18.3"
ron = "0.8.1"

# MCA-converter deps
fastanvil = {version = "0.29.0", optional = true}
# Turbo deps
easy_compute = { path = "./crates/easy_compute", optional = true}
bytemuck = { version = "1.14.0" }
bytemuck_derive = { version = "1.5.0" }
rand = "0.8.5"
# forr = "0.2.2"
akin = "0.4.0"
plotters = { version = "0.3.5", default-features = false, features = ["svg_backend", "histogram"] }
criterion = { version = "0.4", features = ["html_reports"], optional = true}

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu.git", package = "spirv-builder", optional = true }


[features]
default = [ ]
turbo = ["dep:easy_compute", "dep:spirv-builder" ]
mca_converter = ["dep:fastanvil"]
bench = ["dep:criterion"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
codegen-units = 16



