[package]
name = "bevy_venx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bevy"
path = "bin/temp_bevy_integration/example.rs"

[dependencies]
bevy = { version = "0.12" } 
bevy_water = "0.12"
bevy_panorbit_camera = "0.13.0"
pollster = "0.3.0"
venx = { path = "../" }
glam = "*"
downcast-rs = "1.2.0"

[features]
# Enables parallel processing support by enabling the "rayon" feature of jpeg-decoder.
dyn = ["bevy/dynamic_linking"]

# [features]
# build-binary = ["serde", "csv", "crossbeam", "num_cpus"]

[patch.crates-io]
# gpu-descriptor = "0.2.3"
 # ahash = "0.7.7"

[profile.dev]
#incremental = true

[profile.release]
#incremental = true