[package]
name = "bevy_venx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bevy"
path = "bin/temp_bevy_integration/example.rs"

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_pbr"]} 
bevy_water = "0.12"
bevy_panorbit_camera = "0.13.0"
# pollster = "0.3.0"
venx = { path = "../" }
glam = "*"
# downcast-rs = "1.2.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
futures-intrusive = "0.5.0"
rand = "0.8.5"

[features]
dyn = ["bevy/dynamic_linking"]

