[package]
name = "plats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitcode = "0.5.0"
fastanvil = {version = "0.29.0", optional = true}
log = "0.4.20"
ron = "0.8.1"
serde = { version = "1.0.195", features = ["serde_derive", "derive"] }

[features]
default = []
mca_converter = ["dep:fastanvil"]
