[package]
name = "venx_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", default-features = false }
spirv-std = "0.9.0"


[features]
default = []
no_std = []

[profile.dev]
incremental = true