[package]
name = "venx_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytemuck = { version = "1.14.1", features = ["derive"] }
spirv-std = "0.9.0"


[features]
default = []
gpu = []

[profile.dev]
incremental = true
