
[package]
name = "easy_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["dylib"]

#[workspace]

#members = [
 #   "shaders/*"]

[dependencies]
anyhow = "1.0.74"
async-trait = "0.1.73"
bytemuck =  { version = "1.13.1", features = ["derive"] }
futures-intrusive = "0.5.0"
pollster = "0.3.0"
wgpu = { version = "0.15.1", features = ["naga", "spirv", "vulkan-portability"] }
# naga = "0.13.0"
# naga_oil = "0.9.0"
# simple = { path = "./shaders/simple"}

#[build-dependencies]
#spirv-builder = { features = [], version = "0.9.0" }


# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
# [profile.release.build-override]
# opt-level = 3
# codegen-units = 16
# [profile.dev.build-override]
# opt-level = 3


# Enable incremental by default in release mode.
[profile.release]
#incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256

# Compile build-dependencies in release mode with the same settings
# as regular dependencies (including the incremental enabled above).
[profile.release.build-override]
opt-level = 3
#incremental = true
codegen-units = 256