
[package]
name = "easy_compute"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.74"
async-trait = "0.1.73"
bytemuck =  { version = "1.13.1", features = ["derive"] }
futures-intrusive = "0.5.0"
pollster = "0.3.0"
wgpu = { version = "0.17.2", features = ["naga", "spirv", "vulkan-portability"] }
