[package]
name = "venx_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
async-trait = "0.1.73"
bytemuck = "1.13.1"
futures-intrusive = "0.5.0"
pollster = "0.3.0"
wgpu = { version = "0.17.0", features = ["naga"] }
naga = "0.13.0"
naga_oil = "0.9.0"
