[package]
name = "venx_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bevy"
path = "bin/temp_bevy_integration/example.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
venx_compute = { path = "../venx_compute"}
glam = "*"
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
async-trait = "0.1.73"
bytes-cast = "0.3.0"
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_panorbit_camera = "0.8.0"
anyhow = "1.0.75"
fastanvil = {version = "0.29.0", optional = true}
bitcode = { version = "0.4.0", features = ["derive"] }
pollster = "0.3.0"
log = "0.4.20"
rand = "0.8.5"

[features]
default = ["gpu", "mca_converter"]
gpu = []
bevy_ecs = []
mca_converter = ["dep:fastanvil"]
